--- a/Transmilenio/src/app/route/route-view/route-view.component.css
+++ b/Transmilenio/src/app/route/route-view/route-view.component.css
@@ -1,14 +1,109 @@
+
+/*Host*/
+
+:host {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    color: #333;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+/*Tool Bar*/
+
+  .toolbar {
+    font-size: 15px;
+    height: 60px;
+    margin: -8px;
+    display: flex;
+    align-items: center;
+    background-color: #C0392B ;
+    color: white;
+    font-weight: 700;
+  }
+
+/*Title Routes*/
+
+  .titleRoutes {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 32px;
+    text-align: center;
+    height: 45px;
+    align-items: center;
+    background-color: #221122 ;
+    color: white;
+    font-weight: 700;
+    margin: 40px 80px 10px !important;
+   
+  }
+
+.route{
+  
+    width: 100%;
+}
+.row{
+    margin: -196px -230px 0px;
+    float: right;
+    width: 100%;
+}
+
+/*Barra del Menu*/
+
+.menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: /*#BBBBBB*/ #f9c126;
+    position: fixed;
+    top: 148px;
+    left: 583px;
+    width: 44.1%;
+   
+    
+}
+  
+.refM {
+     float: inline-end;
+}
+  
+.opM, .refM {
+    display: inline;
+    color: #000;
+    padding: 4px 17.5px;
+    text-decoration: wavy;
+    text-align: center;
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 15px;  
+    font-weight: bold;
+}
+
+.opM {
+    border-right: 1px solid #212121;
+
+}
+
+.opM:last-child {
+    border-right: none;
+  }
+  
+.refM:hover {
+    background-color: #8B8787;
+    color: white;
+}
+
+/*Tables*/
+
 .tablaGen {
-    margin: auto;
     margin-bottom: 15px;
     width: 99% !important;
     clear: both;
+    float: right;
 }
 
 .tablaGen caption {
     background: #F5F5F5;
     font-size: 13px;
-    margin: auto;
+    /*margin: auto;*/
 }
 
 .tablaGen th {
@@ -22,14 +117,14 @@
 .tablaGen td {
     background: #F7F7F7;
     font-size: 0.83em;
-    border-right: 1px dotted #C1C1C1;
-    padding: 5px 3px;
+    /*border-right: 1px dotted #C1C1C1;*/
+    /*padding: 5px 3px;*/
     border-bottom: 1px dotted #C1C1C1;
     text-align: left;
 }
 
 .tablaGen td a {
-    color: #024266;
+    columns: #212121; ; /*color code*/
 }
 
 .tablaGen tr.cssRegistro td {
@@ -37,16 +132,17 @@
 }
 
 .table {
-    margin: auto;
+    margin: -1100px 400px -1000px;
     margin-bottom: 15px;
-    width: 99% !important;
+    width: 45% !important;
     clear: both;
+
 }
 
 table caption {
     background: #F5F5F5;
     font-size: 13px;
-    margin: auto;
+    /*margin: auto;*/
 }
 
 table th {
@@ -66,13 +162,207 @@ table td {
     text-align: left;
 }
 
+table.dataTable {
+    clear: both;
+    margin-top: 6px !important;
+    margin-bottom: 6px !important;
+    max-width: none !important;
+    border-collapse: separate !important;
+}
+thead {
+    display: table-header-group;
+    vertical-align: middle;
+    border-color: inherit;
+}
+body {
+    font-size: 16px;
+    font-family: 'Roboto',sans-serif;
+    overflow-x: hidden;
+    color: #212121;
+}
+
+tr {
+    display: table-row;
+    vertical-align: inherit;
+    border-color: inherit;
+    border-top-color: inherit;
+    border-right-color: inherit;
+    border-bottom-color: inherit;
+    border-left-color: inherit;
+}
+b, strong {
+    font-weight: 700;
+}
+
+table.dataTable td, table.dataTable th {
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+td.sorting_disabled {
+    display: none;
+}
+
+#tblRutasTroncales td {
+    border-right: 0;
+    border-top: 0;
+    border-bottom: 1px dashed #a7a7a7;
+    padding: 10px 25px;
+}
+
 a {
-    color: #262626;
-    text-decoration: none;
-    font-weight: normal;
+   background-color: transparent;
+   color: #212121;
+   font-family: Roboto, sans-serif;
+   font-size: 18.592px;
+   font-weight: 400;
+   letter-spacing: normal;
+   line-height: 2;
+   text-decoration-color: #212121;
+   text-decoration-style: solid;
+   text-transform: none;
+    
 }
 
-a:hover, a:focus {
-    text-decoration: underline;
+.label-horario {
+    display: inline-block;
+    background: #303030 !important;
+    font-weight: normal !important;
+    padding: 5px;
+    margin-top: 5px;
+    margin-bottom: 0;
+    background-origin: border-box;
+    background-size: auto;
+    border-collapse: separate;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 11px;
 }
 
+.label {
+    
+    padding: .2em .6em .3em;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+
+}
+
+p {
+    margin: 0 0 10px;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+
+.containerCodigo {
+    margin-right: 25px;
+    float: left;
+    width: 10% !important
+}
+
+.codigoRuta {
+    border-bottom: 10px solid #C0392B;
+    font-size: 2em;
+    line-height: 40px;
+    top: 0px;
+    font-family: 'Roboto Regular', Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    text-align: center;
+    width: 100%;
+  
+}
+
+element.style {
+    border-bottom: 10px solid;
+}
+
+/* Buscador */
+
+.dModRutas {
+    line-height: normal;
+    letter-spacing: initial;
+    background: #efefef;
+    border: 1px solid #DDD;
+    height: 200px;
+    margin-bottom: 20px;
+    text-align: left;
+    width: 340px;
+    margin-top: 10px;
+    margin-left: 170px ;
+    
+}
+
+/*
+.dModRutas .form-control {
+    border: 2px solid #DDD;
+    height: 40px;
+    border-radius: 10px;
+    box-shadow: none;
+    margin-bottom: 0;
+}*/
+
+label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 10px;
+    font-weight: 700;
+    cursor: default;
+}
+
+.form-control {
+    display: block;
+    width: 83%;
+    height: 30px;
+    padding: 6px 12px;
+    font-size: 12px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    margin: 20px 15px 10px !important;
+    cursor: text;
+}
+
+input{
+    -webkit-rtl-ordering: logical;
+    cursor: text;
+    text-rendering: auto;
+}
+
+button, input {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+.btn, .btn-primary {
+    background: #f9c126;
+    border: 0;
+    color: #212121;
+    font-weight: bold;
+    padding: 0.5em 2em;
+    text-transform: initial;
+    white-space: nowrap;
+    width: 50%;
+    margin: 10px 80px 10px !important;
+}
+
+button, html input[type=button], input[type=reset], input[type=submit] {
+    -webkit-appearance: button;
+    cursor: pointer;
+}
